--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
         </ul>
       </nav>
       <ul class="contacts-list">
-        <li class="contacts-list__item">
-          <a href="mailto:info@devstudio.com" class="contacts-list__link">
+       <li class="contacts-list__item">
+        <a href="mailto:info@devstudio.com" class="contacts-list__link">
             <svg class="contacts-list__icon" width="16" height="12">
               <use href="./images/symbol-defs.svg#icon-envelope"></use>
             </svg>
             info@devstudio.com</a>
         </li>
+        
         <li class="contacts-list__item">
           <a href="tel:+380961111111" class="contacts-list__link">
             <svg class="contacts-list__icon" width="10" height="16">
@@ -486,10 +487,10 @@
     </nav>
     <ul class="mobile-contacts">
       <li class="mobile-contacts__item">
-        <a href="tel:+380961111111" class="mobile-contacts__link">+38 096 111 11 11</a>
+        <a href="tel:+380991111111" class="mobile-contacts__link">+38 099 111 11 11</a>
       </li>
       <li class="mobile-contacts__item">
-        <a href="mailto:info@devstudio.com" class="mobile-contacts__link">info@devstudio.com</a>
+        <a href="mailto:info@example.com" class="mobile-contacts__link">info@example.com</a>
       </li>
     </ul>
     <ul class="mobile-social">
