--- a/portfolio.html
+++ b/portfolio.html
@@ -300,10 +300,10 @@
     </nav>
     <ul class="mobile-contacts">
       <li class="mobile-contacts__item">
-        <a href="tel:+380961111111" class="mobile-contacts__link">+38 096 111 11 11</a>
+        <a href="tel:+380991111111" class="mobile-contacts__link">+38 099 111 11 11</a>
       </li>
       <li class="mobile-contacts__item">
-        <a href="mailto:info@devstudio.com" class="mobile-contacts__link">info@devstudio.com</a>
+        <a href="mailto:info@example.com" class="mobile-contacts__link">info@example.com</a>
       </li>
     </ul>
     <ul class="mobile-social">
