--- a/portfolio.html
+++ b/portfolio.html
@@ -226,7 +226,7 @@
         </a>
         <address class="address">
           <ul class="address__list">
-            <li class="address__item">г. Киев, пр-т Леси Украинки, 26</li>
+            <li tabindex="0" class="address__item">г. Киев, пр-т Леси Украинки, 26</li>
             <li class="address__item"><a href="mailto:info@devstudio.com" class="address__link">info@devstudio.com</a>
             </li>
             <li class="address__item"><a href="tel:+380961111111" class="address__link">+38 096 111 11 11</a></li>
