--- a/portfolio.html
+++ b/portfolio.html
@@ -60,11 +60,11 @@
       <div class="container">
         <h1 class="visually-hidden">Наши проекты</h1>
         <ul class="filter__list">
-          <li class="filer__items"><button type="button" class="filter__button">Все</button></li>
-          <li class="filer__items"><button type="button" class="filter__button">Веб-сайты</button></li>
-          <li class="filer__items"><button type="button" class="filter__button">Приложения</button></li>
-          <li class="filer__items"><button type="button" class="filter__button">Дизайн</button></li>
-          <li class="filer__items"><button type="button" class="filter__button">Маркетинг</button></li>
+          <li class="filter__items"><button type="button" class="filter__button">Все</button></li>
+          <li class="filter__items"><button type="button" class="filter__button">Веб-сайты</button></li>
+          <li class="filter__items"><button type="button" class="filter__button">Приложения</button></li>
+          <li class="filter__items"><button type="button" class="filter__button">Дизайн</button></li>
+          <li class="filter__items"><button type="button" class="filter__button">Маркетинг</button></li>
         </ul>
         <ul class="portfolio__list">
           <li class="portfolio__item">
